add display one company

--- a/testCode/styles/styles.css
+++ b/testCode/styles/styles.css
@@ -13,3 +13,12 @@ a.active {
 nav {
   padding-top: 20px;
 }
+
+.card {
+  margin-bottom: 15px ! important;
+}
+
+.card-block > span {
+  font-weight: bold ! important;
+}
+
