--- a/testCode/styles/styles.css
+++ b/testCode/styles/styles.css
@@ -1,9 +1,16 @@
 #app {
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #4d4d4d;
-  min-width: 550px;
-  max-width: 850px;
+  min-width: 100%;
+  max-width: 100%;
   margin: 0 auto;
+}
+@media screen and (min-width: 1200px) {
+  .container-fluid {
+    width: 900px;
+    margin: 0 auto;
+  }
+
 }
 
 a.active {
